test/test-files/analyzer/builtins/error-printf-wrong-type4/exception.out
Semantic error in : ./test-files/analyzer/builtins/error-printf-wrong-type4/source.spice:5:18:
Types of printf call not matching: Template string expects pointer, but got NotAPointer

printf("%p", nonPtr);
             ^^^^^^